--- a/config.json
+++ b/config.json
@@ -10,8 +10,8 @@
   "AvatarDirectory": "./public/files/avatars/",
   "SpecialEvent": "SHOWMATCH",
   "LeftImage": "/files/league/league.png",
-  "LeftPrimary": "ESEA Group A · Round 14",
-  "LeftSecondary": "Best of 1", 
+  "LeftPrimary": "GameCon Season 1 organized by EWU",
+  "LeftSecondary": "Best of 3", 
   "RightImage": "/files/league/league2.png",
   "RightPrimary": " ",
   "RightSecondary": " ",
