--- a/RADAR/config/config.override.json5
+++ b/RADAR/config/config.override.json5
@@ -15,12 +15,12 @@
 		"alwaysOnTop": false,
 
 		// Make the background of the window transparent
-		"transparent": false,
+		"transparent": true,
 
 		// Change the background color of the window with optional transparency
 		// The color should be in hexadecimal color code
 		// like #FFF or #FFFFFF to normal color and #80FFFFFF to color with transparency
-		"backgroundColor": "#000000",
+		"backgroundColor": "#80000000",
 
 		// Start window as a full screen application
 		// Use ALT + F4 to quit
@@ -71,7 +71,7 @@
 		// Only works on SimpleRadar maps, can either be "never", "buytime" or "always"
 		"showBuyzones": "buytime",
 		// Show Boltobserv, Simple Radar and Lexogrine logos
-		"showLogos": true,
+		"showLogos": false,
 
 		// Show muzzle flashes for players shooting
 		"shooting": true,
@@ -114,7 +114,7 @@
 	// Settings for automatically zooming in on alive players on the map
 	"autozoom": {
 		// Enable or disable autozoom
-		"enable": true,
+		"enable": false,
 
 		// Frames to smooth out zoom movement
 		"smoothing": 32,
