--- a/RADAR/maps/maps/de_nuke/meta.json5
+++ b/RADAR/maps/maps/de_nuke/meta.json5
@@ -7,26 +7,45 @@
 	},
 
 	// The amount of in-game units per pixel of the 1024px radar image
-	"resolution": 4.74,
+	"resolution": 6.98,
 
 	// How many in-game units is the origin (0,0) of the map from the bottom left point of the radar
 	"offset": {
-		"x": 2510,
-		"y": 2440
+		"x": 3290,
+		"y": 5990
 	},
 
 	// Contains any special map splits
-	"splits": [],
+	"splits": [
+		{
+			// The top and bottom y height for this split
+			"bounds": {
+				"top": -482,
+				"bottom": -2500
+			},
+			// The radar offset in percentages to apply when player is in the split
+			"offset": {
+				"x": 0,
+				"y": -46
+			},
+
+			// The minimum and maximum height a player can be within this split
+			"zRange": {
+				"min": -770,
+				"max": -480
+			}
+		}
+	],
 
 	// Position in which advisories should be placed, in percentages from the bottom left
 	"advisoryPosition": {
-		"x": 10,
-		"y": 56
+		"x": 20,
+		"y": 30
 	},
 
 	// The minimum and maximum height a player can be on the map
 	"zRange": {
-		"min": -320,
-		"max": 15
+		"min": -480,
+		"max": -20
 	}
 }
