--- a/HUD/package.json
+++ b/HUD/package.json
@@ -9,16 +9,16 @@
   ],
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "fs": "latest",
-    "http": "^0.0.1-security",
+    "http": "latest",
     "index.js": "^0.0.3",
     "ip": "latest",
     "multer": "latest",
     "nedb": "latest",
-    "node": "^20.18.1",
+    "node": "^21.0.0",
     "pug": "^3.0.2",
     "request": "latest",
-    "socket.io": "^4.8.1"
+    "socket.io": "^2.5.0"
   }
 }
