--- a/HUD/config.json
+++ b/HUD/config.json
@@ -10,8 +10,8 @@
   "AvatarDirectory": "./public/files/avatars/",
   "SpecialEvent": "SHOWMATCH",
   "LeftImage": "/files/league/league.png",
-  "LeftPrimary": "Counter-Strike Bangladesh Invitational series",
-  "LeftSecondary": "Best of 5", 
+  "LeftPrimary": "Bangladesh ROAD to WEC #2025",
+  "LeftSecondary": "Best of 3", 
   "RightImage": "/files/league/league2.png",
   "RightPrimary": " ",
   "RightSecondary": " ",
